--- a/Plantilla_TFG_latex/secciones/01_Introduccion.tex
+++ b/Plantilla_TFG_latex/secciones/01_Introduccion.tex
@@ -1,10 +1,11 @@
 \chapter{Introducción} \label{chap:introduction}
 
 \section{Contexto Actual y Relevancia de la Programación}
-En el entorno contemporáneo, la digitalización ha permeado casi todos los aspectos de nuestra vida cotidiana. Desde la forma en que comunicamos hasta cómo llevamos a cabo tareas básicas, todo se ha visto transformado bajo el influjo de la tecnología. En este contexto, la programación, que antes era vista únicamente como una herramienta técnica, ahora es una habilidad fundamental del siglo XXI. Esta no solo es crucial para aquellos que aspiran a una carrera en el ámbito tecnológico, sino también para la población en general que busca comprender y aprovechar al máximo las herramientas digitales actuales. Sin embargo, la enseñanza de programación a una audiencia joven, como los niños, plantea desafíos singulares debido a la complejidad del contenido y a las particularidades pedagógicas que requiere.
+En la era actual, la digitalización está en todas partes. Afecta desde cómo nos comunicamos hasta como llevamos a cabo de tareas cotidianas. Siendo la tecnología la impulsora de este cambio. Dentro de este contexto,  la programación ya no es una mera herramienta técnica. Si no, que se ha convertido en una habilidad esencial del siglo XXI. No solo es importante para aquellos que buscan una carrera tecnológica. También es importante para el público que desea entender y utilizar eficazmente las herramientas digitales. Sin embargo, enseñar programación a niños presenta desafíos únicos. Debido a la complejidad del contenido como a las necesidades pedagógicas específicas.
 
-\section{Motivación y Objetivo del TFG}
-Ante la creciente demanda de educación tecnológica de calidad para los más jóvenes, surge la necesidad de herramientas pedagógicas innovadoras que se adapten a este público en particular. Es en este contexto donde se sitúa el presente Trabajo de Fin de Grado (TFG). Con la ambición de ofrecer una solución didáctica adaptada, se ha desarrollado un Sistema de Tutorización Inteligente (ITS). Más allá de ofrecer lecciones y ejercicios convencionales, el ITS está diseñado para evaluar y adaptarse a las necesidades individuales de cada estudiante, usando indicadores específicos como la puntuación obtenida en la resolución de un ejercicio y el tiempo de respuesta.
+\section{Descripción del Problema}
+
+Tal como hemos hablado en la sección anterior, enseñar programación a niños es un desafío que no podemos ignorar. Existen diversas plataformas educativas, pero muchas tienen bastantes limitaciones. Ofrecen ejercicios y evaluaciones estáticas, sin tener en cuenta una adaptación al ritmo o habilidades del estudiante. Además, la mayoría, únicamente se centran en la corrección del código. Por ello, ignoran aspectos como la eficiencia del mismo y el uso de buenas prácticas de programación. Este enfoque limitado no solo afecta a los estudiantes. También deja a profesores y administradores sin las herramientas necesarias para interactuar de una forma efectiva con el sistema. Es por eso que hay una necesidad clara e importante de una solución más completa y adaptativa para la enseñanza de programación a niños.
 
 \section{Enfoque}
 Este TFG adopta un enfoque multidisciplinario, combinando elementos de pedagogía, tecnología educativa y diseño de sistemas. La naturaleza del trabajo exige la interacción de varias disciplinas con tal de abordar de manera eficaz los desafíos presentados por la enseñanza de programación a niños.
@@ -22,12 +23,12 @@ El trabajo se estructura alrededor de varios núcleos esenciales:
 \end{enumerate}
 
 \subsection{Desarrollo Ágil}
-Dada la naturaleza dinámica y la necesidad de adaptabilidad del proyecto, se ha optado por emplear un desarrollo ágil para el desarrollo del software. Este enfoque permite un desarrollo iterativo e incremental, facilitando adaptaciones rápidas a los cambios y proporcionando entregas parciales que pueden ser evaluadas y mejoradas en etapas tempranas del proyecto.
+Para abordar la dinámica cambiante y las necesidades de adaptabilidad del proyecto, se ha optado por usar un enfoque de desarrollo ágil para el desarrollo del software. Esto, favorece un proceso iterativo e incremental, permitiendo varios ajustes rápidos ante cualquier cambio. Además, de ofrecer la posibilidad de realizar entregas parciales que se pueden evaluar y ajustar en fases iniciales.
 
-Esta metodología asegura que el desarrollo sea flexible, colaborativo y orientado al usuario final, garantizando que las soluciones desarrolladas estén alineadas con las necesidades reales de enseñanza y aprendizaje.
+Esta estrategia de desarrollo asegura flexibilidad, fomenta la colaboración y se centra en el usuario final. Garantizando, así, que las soluciones implementadas se alinean con las necesidades del ámbito de la enseñanza y el aprendizaje.
 
 \section{Colaboración con Codelearn S.L.}
 Este proyecto no habría sido posible sin la colaboración estrecha con Codelearn S.L.  \cite{codelearn}, una destacada entidad internacional de la educación tecnológica para niños. A pesar de los avances y logros de Codelearn S.L., se identificó la necesidad de evolucionar y adaptar su sistema pedagógico para hacerlo más personalizado y efectivo. Esta colaboración ha permitido fusionar la experiencia y conocimientos de ambas partes, con el objetivo de desarrollar un ITS que permita mejorar la forma en que se enseña programación a niños.
 
 \section{Conclusión}
-A través de este TFG, se busca proporcionar una respuesta concreta y bien fundamentada a los desafíos actuales de la enseñanza de programación. Con un enfoque innovador y una aplicación práctica, se espera que este trabajo siente las bases para futuras investigaciones y desarrollos en el ámbito de la educación tecnológica adaptativa.
+Este TFG busca ofrecer soluciones sólidas y bien argumentadas a los retos actuales de la enseñanza en la programación. Mediante un enfoque innovador y una aplicación práctica, se busca establecer un fundamento sobre el cual puedan construirse futuros avances e investigaciones dentro del campo de la tecnología educativa adaptativa.
