--- a/Plantilla_TFG_latex/secciones/03_ObjetivoPlanificación.tex
+++ b/Plantilla_TFG_latex/secciones/03_ObjetivoPlanificación.tex
@@ -120,7 +120,8 @@ El proyecto tuvo inicio a principios de julio, durando cinco meses hasta su fina
     
     \ganttgroup{Integración ITS-WEB}{2023-10-10}{2023-10-14} \\
     \ganttgroup{Pruebas y Evaluación}{2023-10-14}{2023-10-16} \\
-    \ganttgroup{Mejoras prototipo}{2023-10-17}{2023-10-22} \\
+    \ganttgroup{Mejoras prototipo}{2023-10-17}{2023-10-22}
+    \ganttgroup{}{2023-11-01}{2023-11-06} \\
     
     \ganttgroup{Documentación}{2023-10-22}{2023-11-13} \\
     \ganttbar{Redacción documentación}{2023-10-22}{2023-10-31} \\
