--- a/Plantilla_TFG_latex/secciones/04_implementacion.tex
+++ b/Plantilla_TFG_latex/secciones/04_implementacion.tex
@@ -1,1 +1,12 @@
-\chapter{Análisis y decisión tecnológica} \label{chap:objetivosPlanificación}
+\chapter{Análisis} \label{chap:objetivosPlanificación}
+
+\section{Análisis}
+
+
+\section{Modelos de caso de uso}
+
+\section{Arquitectura del sistema}
+
+\section{Modelos de comportamiento}
+
+\section{Modelado de Entidades y sus relaciones}
