--- a/Plantilla_TFG_latex/secciones/05_analisis.tex
+++ b/Plantilla_TFG_latex/secciones/05_analisis.tex
@@ -1,2 +1,2 @@
-\chapter{Análisis y Experimentación} \label{chap:analisisExperimentación}
+\chapter{Diseño e Implementación} \label{chap:analisisExperimentación}
 
