--- a/Plantilla_TFG_latex/secciones/06_resultados.tex
+++ b/Plantilla_TFG_latex/secciones/06_resultados.tex
@@ -1,1 +1,1 @@
-\chapter{Resultados Experimentales} \label{chap:resultadosExperimentales}
+\chapter{Pruebas y Resultados} \label{chap:resultadosExperimentales}
