Comienzo de la sección de análisis

--- a/Plantilla_TFG_latex/Bibliografia/referencias.bib
+++ b/Plantilla_TFG_latex/Bibliografia/referencias.bib
@@ -6,7 +6,6 @@
     note = {Accedido el: 24 de Octubre, 2023}
 }
 
-
 @misc{dreambox,
     title = {DreamBox Learning},
     author = {Discovery Education},
@@ -124,4 +123,78 @@
     year = {2023},
     howpublished = {\url{https://www.seg-social.es/wps/portal/wss/internet/Trabajadores/CotizacionRecaudacionTrabajadores/36537}},
     note = {Accedido el: 26 de Octubre, 2023}
+}
+
+@article{large2005,
+    title={Interface Design, Web Portals, and Children},
+    author={Large, J. A. and Beheshti, Jamshid},
+    journal={Library Trends},
+    volume={54},
+    number={2},
+    pages={318--342},
+    year={2005},
+    publisher={Johns Hopkins University Press},
+    doi={https://doi.org/10.1353/lib.2006.0017}
+}
+
+@inproceedings{interfacedesign,
+    author = {Frye, Douglas and Soloway, Elliot},
+    title = {Interface Design: A Neglected Issue in Educational Software},
+    year = {1986},
+    publisher = {Association for Computing Machinery},
+    url = {https://doi.org/10.1145/29933.30865},
+    doi = {10.1145/29933.30865},
+    booktitle = {Proceedings of the SIGCHI/GI Conference on Human Factors in Computing Systems and Graphics Interface},
+    pages = {93--97},
+    series = {CHI '87}
+}
+
+@article{pears2007,
+    title={A Survey of Literature on the Teaching of Introductory Programming},
+    author={Pears, Arnold and Seidman, Stephen and Malmi, Lauri and Mannila, Linda and Adams, Elizabeth and Bennedsen, Jens and Devlin, Marie and Paterson, James},
+    journal={ACM SIGCSE Bulletin},
+    volume={39},
+    number={4},
+    pages={204--223},
+    year={2007},
+    publisher={ACM}
+}
+
+@article{document2010,
+    title={Learning and Teaching Programming: A Review and Discussion},
+    author={Robins, Anthony and Rountree, Janet and Rountree, Nathan},
+    journal={Computer Science Education},
+    volume={13},
+    number={2},
+    pages={137--172},
+    year={2003},
+    publisher={Swets & Zeitlinger}
+}
+
+@article{dewarschonberg,
+    title={Computer Science Education: Where Are the Software Engineers of Tomorrow?},
+    author={Dewar, Robert B.K. and Schonberg, Edmond},
+    journal={Open Forum},
+    year={2001},
+    publisher={AdaCore Inc.}
+}
+
+@article{teachingcodingchildren,
+    title={Teaching Coding to Children: A Methodological Approach},
+    author={Tevfik Kaplancali, Ugur and Demirkol, Zafer},
+    journal={International Journal of Elementary Education},
+    volume={6},
+    number={4},
+    pages={32--37},
+    year={2017},
+    publisher={SciencePG}
+}
+
+@inproceedings{intelligentturoingprogrammingeducation,
+author = {Crow, Tyne and Luxton-Reilly, Andrew and Wünsche, Burkhard},
+year = {2018},
+month = {01},
+pages = {53-62},
+title = {Intelligent tutoring systems for programming education: a systematic review},
+doi = {10.1145/3160489.3160492}
 }
