--- a/Plantilla_TFG_latex/secciones/05_Implementacion.tex
+++ b/Plantilla_TFG_latex/secciones/05_Implementacion.tex
@@ -1,11 +1,58 @@
-\chapter{Análisis} \label{chap:objetivosPlanificación}
+\chapter{Análisis} \label{chap:analisis}
 
 \section{Análisis}
 
-\section{Modelos de caso de uso}
+En este capítulo se van a exponer diferentes aspectos relacionados con el diseño e implementación. Concretamente, se realiza un análisis de los usuarios objetivo, comprendiendo sus necesidades, expectativas y limitaciones. Asimismo, también se muestran los modelos de caso de uso, la arquitectura del sistema. Conjuntamente, con los modelos de comportamiento y el modelado de entidades y relaciones. De esta manera, se ofrece una visión clara y estructurada de la solución propuesta.
 
-\section{Arquitectura del sistema}
+\subsection{Análisis de Usuarios Objetivo}
 
-\section{Modelos de comportamiento}
+El enfoque de la plataforma web está dirigido principalmente a niños entre los 8 y 18 años, siguiendo la metodología de CODELEARN S.L.. Donde la mayoría de los clientes son estudiantes con poco o ningún conocimiento previo de programación. Es por ello que la plataforma está diseñada para ser intuitiva y flexible, en línea con las recomendaciones de Large y Beheshti sobre el diseño de interfaces para niños \cite{large2005}.
 
-\section{Modelado de Entidades y sus relaciones}
+Si tenemos en cuenta la brevedad del período de atención de los niños y su desarrollo cognitivo en curso, se deberán evitar tareas extensas o excesivamente complicadas. Las expectativas y necesidades son diversas, pero comúnmente incluyen una interfaz visualmente atractiva, instrucciones claras y una retroalimentación inmediata tal como especifican Duglas Frye y Elliot Soloway \cite{interfacedesign}. Asimismo, se han incorporado elementos de gamificación dentro la plataforma con tal mantener el interés y la motivación de los usuarios. 
+
+Finalmente, la plataforma será accesible; es decir, se podrá acceder desde múltiples dispositivos como ordenadores, tablets y smartphones debido a su diseño \textit{Web Responsive}.
+
+\subsection{Análisis de Requisitos Educativos}
+
+La enseñanza de habilidades de programación dentro de las escuelas está cobrando una gran relevancia. Sin embargo, hay una falta de herramientas y enfoques efectivos mucho más allá de herramientas como Scratch \cite{teachingcodingchildren}. Conscientes de esta brecha, este sistema educativo adopta un enfoque fundamentado en evidencia y prácticas académicas sólidas.
+
+Aunque lenguajes como Scratch y Logo son de los más populares para la educación de niños, se ha optado por Python, C++, Java y HTML+CSS+JS. Python es conocido por su simplicidad y legibilidad, lo que facilita el aprendizaje para los principiantes \cite{pears2007}. Además, permite una transición fluida a lenguajes más complejos. C++, Java y HTML+CSS+JS, aunque sujetos a debate sobre su idoneidad para principiantes, son cruciales en la industria y la educación. Su relevancia práctica justifica su presencia \cite{dewarschonberg}.
+
+Al ir más allá de los enfoques basados en bloques como Scratch, se busca que los niños aprendan la programación basada en texto, más cercana a la realidad. Los ejercicios se organizan por competencias específicas, permitiendo un aprendizaje adaptable y progresivo. Alineando el enfoque con los resultados de investigaciones sobre el tema \cite{document2010}. 
+
+Es importante destacar que el sistema se ha diseñado para ser inclusivo, ofreciendo ejercicios de diversa dificultad y con un buen sistema de asistencia. De esta manera, se siguen las directrices recomendadas por Luxton-Reily y Wünsche sobre las características de un buen sistema inteligente para la enseñanza de programación \cite{intelligentturoingprogrammingeducation}, consiguiendo un buen enfoque educativo.
+
+\section{Modelos de Caso de Uso}
+
+\subsection{Caso de Uso para Estudiantes}
+% Contenido aquí
+
+\subsection{Caso de Uso para Administradores}
+% Contenido aquí (si aplicable)
+
+\section{Arquitectura del Sistema}
+
+\subsection{Arquitectura Frontend}
+% Contenido aquí
+
+\subsection{Arquitectura Backend}
+% Contenido aquí
+
+\section{Modelos de Comportamiento}
+
+\subsection{Diagramas de Flujo para la Selección y Evaluación de Ejercicios}
+% Contenido aquí
+
+\subsection{Diagramas para la Lógica de Corrección y Evaluación de Calidad de Código}
+% Contenido aquí
+
+\section{Modelado de Entidades y sus Relaciones}
+
+\subsection{Entidades Principales}
+% Contenido aquí
+
+\subsection{Diagramas ER o de Clases}
+% Contenido aquí
+
+\section{Métricas de Evaluación}
+% Contenido aquí
