Modelos y escenarios de uso

--- a/Plantilla_TFG_latex/Bibliografia/referencias.bib
+++ b/Plantilla_TFG_latex/Bibliografia/referencias.bib
@@ -198,3 +198,10 @@ pages = {53-62},
 title = {Intelligent tutoring systems for programming education: a systematic review},
 doi = {10.1145/3160489.3160492}
 }
+
+@online{planttext,
+  title   = {PlantULM},
+  year    = {2023},
+  url     = {https://plantuml.com/es/},
+  note    = {Accedido el: 29 de Octubre, 2023},
+}
