--- a/Plantilla_TFG_latex/proyecto.tex
+++ b/Plantilla_TFG_latex/proyecto.tex
@@ -250,6 +250,7 @@ pdfproducer = {pdflatex}
 \usepackage{rotating}
 \usepackage{microtype}
 \usepackage[T1]{fontenc}
+\usepackage{longtable} % para tablas largas
 
 \begin{document}
 
